Gitnotes revised with an instructions set

--- a/GITnotes.ipynb
+++ b/GITnotes.ipynb
@@ -244,12 +244,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "54cb1a36-3cf4-4fd7-92d7-2c99cc7c9b5c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### consolidated usually used commands when uploading for the first time in a new repository\n",
+    "- Open VS code in your folder where tracking is required\n",
+    "- open git bash on your VS code terminal\n",
+    "- reconfirm your current working directory by typing --> pwd\n",
+    "- Now check what is inside the pwd by typing --> ls\n",
+    "- Now start the git initialisation using --> git init. This will give a message initialised empty git repository in .....\n",
+    "- now check if you have a hidden file coming up which will be confirmation of git initialisation using --> ls -a\n",
+    "- Now mention what all you want to add to the tracking list by using --> git add .   Here . means everything is being tracked, otherwise you can also type git add file_name\n",
+    "- Now mention the message for the files you are trying to push to the remote repo by using --> git commit -m 'Github notes'\n",
+    "- reconfirm the branch in which you are working by using --> git branch. This returns the branch name ex: main/master/any branch you created. Make sure you this is the correct branch. \n",
+    "- Now you tell the git the remote url of the github where you want to push this by using --> git remote add origin https://github.com/Hmnt-dhngra/Github_notes.git\n",
+    "- Now finally you push your file to the remote repository by using --> git push -u origin main. Here main is the branch where you want to push."
+   ]
   }
  ],
  "metadata": {
